--- a/elliott/.devcontainer/brewkoji.conf
+++ b/elliott/.devcontainer/brewkoji.conf
@@ -7,6 +7,6 @@ authtype = kerberos
 krbservice = brewhub
 topdir = /mnt/redhat/brewroot
 weburl = https://brewweb.engineering.redhat.com/brew
-topurl = http://download.devel.redhat.com/brewroot
+topurl = https://download.devel.redhat.com/brewroot
 use_fast_upload = yes
 anon_retry = yes
