--- a/elliott/Makefile
+++ b/elliott/Makefile
@@ -5,6 +5,8 @@ install:
 
 venv:
 	python3.8 -m venv venv
+	./venv/bin/pip install --upgrade pip
+	./venv/bin/pip install -r requirements-dev.txt -r requirements.txt
 	# source venv/bin/activate
 
 lint:
