--- a/elliott/Makefile
+++ b/elliott/Makefile
@@ -6,7 +6,7 @@ install:
 venv:
 	python3.8 -m venv venv
 	./venv/bin/pip install --upgrade pip
-	./venv/bin/pip install -r requirements-dev.txt -r requirements.txt
+	./venv/bin/pip install .[tests]
 	# source venv/bin/activate
 
 lint:
