--- a/doozer/requirements.txt
+++ b/doozer/requirements.txt
@@ -13,6 +13,7 @@ semver
 tenacity
 wrapt
 mysql-connector-python >= 8.0.21
+pydantic ~= 1.10.7
 python-dateutil >= 2.8.1
 openshift-client >= 1.0.12
 setuptools-scm
