--- a/elliott/pyproject.toml
+++ b/elliott/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "future",
     "koji >= 1.18",
     "semver",
+    "pydantic ~= 1.10.7",
     "pygit2 == 1.10.1",  # https://github.com/libgit2/pygit2/issues/1176
     "python-bugzilla >= 3.2",
     "pyyaml",
