--- a/elliott/pyproject.toml
+++ b/elliott/pyproject.toml
@@ -47,7 +47,7 @@ classifiers = [
 dependencies = [
     "aiohttp[speedups] >= 3.6",
     "click >= 8.1.3",
-    "errata-tool >= 1.29.0",
+    "errata-tool@git+https://github.com/Ximinhan/errata-tool", # https://github.com/red-hat-storage/errata-tool/pull/244
     "future",
     "koji >= 1.18",
     "semver",
