--- a/.github/workflows/doozer-sync.yaml
+++ b/.github/workflows/doozer-sync.yaml
@@ -6,7 +6,9 @@ on:
   schedule:
     - cron: "0 */1 * * *"
   workflow_dispatch: {}
-  push: {}
+  push:
+    branches:
+      - doozer 
 
 jobs:
   forward-commits:
