--- a/.github/workflows/elliott-sync.yaml
+++ b/.github/workflows/elliott-sync.yaml
@@ -6,6 +6,9 @@ on:
   schedule:
     - cron: "0 */1 * * *"
   workflow_dispatch: {}
+  push:
+    branches:
+      - elliott
 
 jobs:
   forward-commits:
