--- a/doozer/requirements.txt
+++ b/doozer/requirements.txt
@@ -16,6 +16,7 @@ mysql-connector-python >= 8.0.21
 pydantic ~= 1.10.7
 python-dateutil >= 2.8.1
 openshift-client >= 1.0.12
+ruamel.yaml
 setuptools-scm
 setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
 aiohttp
