--- a/.github/workflows/merge-doozer-elliott.yaml
+++ b/.github/workflows/merge-doozer-elliott.yaml
@@ -5,6 +5,9 @@ name: merge doozer elliott
 on:
   workflow_dispatch: {}
   push: {}
+  schedule:
+    - cron: "0 */3 * * 1-5"
+
 
 jobs:
   merge-doozer-elliott:
