ART-6367 Run pyartcd tests in gh action (#3855)

--- a/pyartcd/Makefile
+++ b/pyartcd/Makefile
@@ -2,6 +2,9 @@
 
 venv:
 	python3.8 -m venv venv
+	./venv/bin/pip install --upgrade pip
+	./venv/bin/pip install -e ../art-tools/doozer/
+	./venv/bin/pip install -e ../art-tools/elliott/
 	./venv/bin/pip install -r requirements-dev.txt -r requirements.txt
 	# source venv/bin/activate
 
