--- a/pyartcd/requirements.txt
+++ b/pyartcd/requirements.txt
@@ -3,16 +3,13 @@ aiofiles
 aioredlock >= 0.7.3
 click
 contextvars
-errata_tool
-errata-tool @ git+https://github.com/red-hat-storage/errata-tool@v1.31.0
+errata-tool ~= 1.31.0
 ghapi
 jenkinsapi >= 0.3.13  # https://github.com/pycontribs/jenkinsapi/issues/833
 Jinja2
 jira >= 3.4.1  # https://github.com/pycontribs/jira/issues/1486
 openshift-client
 pygit2 == 1.10.1 # https://github.com/libgit2/pygit2/issues/1176
-rh-elliott
-rh-doozer
 ruamel.yaml
 semver >= 2.13.0
 slack_sdk >= 3.13.0
