--- a/.github/workflows/elliott-unit-tests.yaml
+++ b/.github/workflows/elliott-unit-tests.yaml
@@ -1,11 +1,12 @@
-name: Unit tests
+name: elliott-unit-tests
 
 on:
   pull_request:
-    branches: [ master ]
+    paths:
+      - 'elliott/**'
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
     container: fedora:37
     steps:
@@ -17,8 +18,8 @@ jobs:
         with:
           python-version: '3.8'
       - name: Install packages
-        run: dnf install -y gcc krb5-devel
+        run: cd elliott && dnf install -y gcc krb5-devel
       - name: Create venv and install dependencies
-        run: make venv
+        run: cd elliott && make venv
       - name: Run tests
-        run: make test
+        run: cd elliott && make test
