--- a/elliott/pyproject.toml
+++ b/elliott/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "future",
     "koji >= 1.18",
     "semver",
+    "pip_system_certs",
     "pydantic ~= 1.10.7",
     "pygit2 == 1.10.1",  # https://github.com/libgit2/pygit2/issues/1176
     "python-bugzilla >= 3.2",
