--- a/pyartcd/Makefile
+++ b/pyartcd/Makefile
@@ -3,8 +3,8 @@
 venv:
 	python3.8 -m venv venv
 	./venv/bin/pip install --upgrade pip
-	./venv/bin/pip install -e ../art-tools/doozer/
-	./venv/bin/pip install -e ../art-tools/elliott/
+	./venv/bin/pip install -e ../doozer/
+	./venv/bin/pip install -e ../elliott/
 	./venv/bin/pip install -r requirements-dev.txt -r requirements.txt
 	# source venv/bin/activate
 
