--- a/doozer/requirements.txt
+++ b/doozer/requirements.txt
@@ -5,6 +5,8 @@ dockerfile-parse >= 0.0.13
 defusedxml
 future
 koji
+opentelemetry-sdk
+opentelemetry-exporter-otlp-proto-grpc
 pip_system_certs
 PyGitHub == 1.59.1
 pyyaml >= 5.1
