--- a/pyartcd/requirements.txt
+++ b/pyartcd/requirements.txt
@@ -11,6 +11,8 @@ ghapi
 jenkinsapi >= 0.3.13  # https://github.com/pycontribs/jenkinsapi/issues/833
 jira >= 3.4.1  # https://github.com/pycontribs/jira/issues/1486
 openshift-client
+opentelemetry-sdk
+opentelemetry-exporter-otlp-proto-grpc
 pygit2 == 1.10.1 # https://github.com/libgit2/pygit2/issues/1176
 rh-doozer
 rh-elliott
