--- a/.github/workflows/pyartcd-unit-tests.yaml
+++ b/.github/workflows/pyartcd-unit-tests.yaml
@@ -8,15 +8,20 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    container: fedora:37
+    container: fedora:38
     steps:
-      - uses: actions/checkout@v3
+      - name: Install git
+        run: dnf install -y git
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          set-safe-directory: ${{ env.GITHUB_WORKSPACE }}
       - name: Set up Python 3.8
         uses: actions/setup-python@v4
         with:
           python-version: '3.8'
       - name: Install packages
-        run: cd pyartcd && dnf install -y gcc krb5-devel
+        run: dnf install -y gcc krb5-devel
       - name: Create venv and install dependencies
         run: cd pyartcd && make venv
       - name: Run tests
