--- a/doozer/requirements.txt
+++ b/doozer/requirements.txt
@@ -18,6 +18,7 @@ pydantic ~= 1.10.7
 python-dateutil >= 2.8.1
 openshift-client >= 1.0.12
 ruamel.yaml
+setuptools_scm[toml]>=8.0
 setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
 aiohttp
 jira==3.4.1
