--- a/art-cluster/pipelines/config/argocd/project/art-cd/common/image/base.yaml
+++ b/art-cluster/pipelines/config/argocd/project/art-cd/common/image/base.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     dockerfile: art-cluster/pipelines/data/project/art-cd/image/Containerfile.base
     git:
-      ref: master
+      ref: main
       uri: https://github.com/openshift-eng/art-tools
     type: Git
   strategy:
