Refactor redis module Move it to artcommon Use redis official repo instead of aioredis Add sync functions to be used by synchronous code

--- a/pyartcd/requirements.txt
+++ b/pyartcd/requirements.txt
@@ -14,6 +14,7 @@ openshift-client
 opentelemetry-sdk
 opentelemetry-exporter-otlp-proto-grpc
 pygit2 == 1.10.1 # https://github.com/libgit2/pygit2/issues/1176
+redis >= 5.0.1
 rh-doozer
 rh-elliott
 ruamel.yaml
