fix ref task name

--- a/art-cluster/pipelines/config/argocd/project/art-ci/ocp-build-data-validator/pipeline.yaml
+++ b/art-cluster/pipelines/config/argocd/project/art-ci/ocp-build-data-validator/pipeline.yaml
@@ -18,7 +18,7 @@ spec:
           value: $(params.pr_url)
       taskRef:
         kind: Task
-        name: new-validator-task
+        name: validator-task
       when:
         - input: $(params.pr_action)
           operator: in
