--- a/doozer/requirements-dev.txt
+++ b/doozer/requirements-dev.txt
@@ -4,7 +4,7 @@ flake8
 flexmock
 pygit2 == 1.10.1 # https://github.com/libgit2/pygit2/issues/1176
 pylint
-pytest
+pytest == 8.0.2
 tox
 typing
 typing-extensions
