--- a/art-cluster/pipelines/config/argocd/project/art-cd/common/image/base.yaml
+++ b/art-cluster/pipelines/config/argocd/project/art-cd/common/image/base.yaml
@@ -18,7 +18,7 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: art-cd:base
+      name: art-cd:latest
   successfulBuildsHistoryLimit: 10
   failedBuildsHistoryLimit: 5
   runPolicy: Serial
