--- a/art-cluster/pipelines/config/argocd/project/art-cd/common/image/base.yaml
+++ b/art-cluster/pipelines/config/argocd/project/art-cd/common/image/base.yaml
@@ -24,7 +24,7 @@ spec:
   runPolicy: Serial
   triggers:
     - type: ConfigChange
-    - type: Generic
-      generic:
+    - type: GitHub
+      github:
         secretReference:
           name: build-config-webhook-secret
