--- a/doozer/requirements-dev.txt
+++ b/doozer/requirements-dev.txt
@@ -2,7 +2,7 @@ autopep8
 coverage
 flake8
 flexmock
-pygit2 == 1.10.1 # https://github.com/libgit2/pygit2/issues/1176
+pygit2 >= 1.11.1 # https://github.com/libgit2/pygit2/issues/1176
 pylint
 pytest == 8.0.2
 tox
