--- a/elliott/pyproject.toml
+++ b/elliott/pyproject.toml
@@ -50,7 +50,7 @@ dependencies = [
     "semver",
     "pip_system_certs",
     "pydantic ~= 1.10.7",
-    "pygit2 == 1.10.1",  # https://github.com/libgit2/pygit2/issues/1176
+    "pygit2 >= 1.11.1",  # https://github.com/libgit2/pygit2/issues/1176
     "python-bugzilla >= 3.2",
     "pyyaml",
     "requests",
