--- a/ocp-build-data-validator/requirements.txt
+++ b/ocp-build-data-validator/requirements.txt
@@ -21,7 +21,7 @@ pkginfo
 pluggy
 py
 pycparser
-pygit2 == 1.10.1 # https://github.com/libgit2/pygit2/issues/1176
+pygit2 >= 1.11.1 # https://github.com/libgit2/pygit2/issues/1176
 Pygments
 pyparsing
 PyYAML
