--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,8 @@ ignore =
     E722,
     # line break before binary operator
     W503,
+    # missing whitespace around arithmetic operator
+    E226,
 
 exclude = build/*, *.ini, *.in, MANIFEST*, *.md, .eggs, .tox, venv
 max-complexity = -1
