--- a/doozer/requirements.txt
+++ b/doozer/requirements.txt
@@ -5,8 +5,6 @@ dockerfile-parse >= 0.0.13
 defusedxml
 future
 koji
-kubernetes-asyncio ~= 28.0
-openshift ~= 0.13.2
 opentelemetry-sdk
 opentelemetry-exporter-otlp-proto-grpc
 pip_system_certs
@@ -15,7 +13,7 @@ pyyaml >= 5.1
 requests
 requests_kerberos
 semver
-tenacity ~= 8.4, != 8.4.0  # https://github.com/jd/tenacity/issues/471
+tenacity ~= 8.3.0  # https://github.com/jd/tenacity/issues/471
 wrapt
 mysql-connector-python >= 8.0.21
 pydantic ~= 1.10.7
