--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 		"./docker-compose.yaml"
 	],
 	"service": "doozer",
-	"workspaceFolder": "/workspaces/doozer",
+	"workspaceFolder": "/workspaces/art-tools",
 
 	// Use 'settings' to set *default* container specific settings.json values on container create.
 	// You can edit these settings after create using File > Preferences > Settings > Remote.
