--- a/doozer/requirements.txt
+++ b/doozer/requirements.txt
@@ -5,6 +5,7 @@ dockerfile-parse >= 0.0.13
 defusedxml
 future
 koji
+kubernetes ~= 28.0
 kubernetes-asyncio ~= 28.0
 openshift ~= 0.13.2
 opentelemetry-sdk
