[fips scan] make artcd command version independent

--- a/art-cluster/pipelines/config/argocd/project/art-cd/fips-scanning/pipeline-task.yaml
+++ b/art-cluster/pipelines/config/argocd/project/art-cd/fips-scanning/pipeline-task.yaml
@@ -26,7 +26,7 @@ spec:
         pip install stomp.py==8.1.0
         pip install setuptools==70.0.0
 
-        artcd -vv --dry-run scan-fips --version $(params.version) --nvrs $(params.nvrs)
+        artcd -vv --dry-run scan-fips --all-images
 
       securityContext:
         runAsGroup: 0
