--- a/art-cluster/pipelines/config/argocd/project/art-cd/fips-scanning/pipeline.yaml
+++ b/art-cluster/pipelines/config/argocd/project/art-cd/fips-scanning/pipeline.yaml
@@ -11,6 +11,7 @@ spec:
     - description: 'Space separated NVRs'
       name: nvrs
       type: string
+      default: ''
   tasks:
     - name: run-script
       params:
