--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -19,10 +19,10 @@ jobs:
           set-safe-directory: ${{ env.GITHUB_WORKSPACE }}
       - name: Install packages
         run: dnf install -y gcc krb5-devel
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3.11'
       - name: Install packages
         run: dnf install -y gcc krb5-devel
       - name: Create venv and install dependencies
