--- a/ocp-build-data-validator/tox.ini
+++ b/ocp-build-data-validator/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38
+envlist = py311
 
 [testenv]
 deps =
@@ -14,7 +14,7 @@ commands =
 
 [flake8]
 # E501 line too long (88 > 79 characters)
-# E741 ambiguous variable name 'l' (don't modify benhcmarks just for that)
+# E741 ambiguous variable name 'l' (don't modify benchmarks just for that)
 # W503 line break before binary operator
 ignore = E501,E741,W503,E126,E121
 
