--- a/tox.ini
+++ b/tox.ini
@@ -31,5 +31,5 @@ ignore =
     # missing whitespace around arithmetic operator
     E226,
 
-exclude = build/*, *.ini, *.in, MANIFEST*, *.md, .eggs, .tox, venv
+exclude = build/*, *.ini, *.in, MANIFEST*, *.md, .eggs, .tox, .venv
 max-complexity = -1
