--- a/doozer/requirements.txt
+++ b/doozer/requirements.txt
@@ -4,6 +4,7 @@ click >= 8.1.3
 dockerfile-parse >= 0.0.13
 defusedxml
 future
+importlib-resources
 koji
 kubernetes ~= 28.0
 kubernetes-asyncio ~= 28.0
