--- a/doozer/doozerlib/backend/konflux_image_build_pipelinerun.yaml
+++ b/doozer/doozerlib/backend/konflux_image_build_pipelinerun.yaml
@@ -16,6 +16,9 @@ metadata:
   name: ui-ocp-4-18-base-rhel-9-on-push
   namespace: crt-nshift-art-pipeli-tenant
 spec:
+  timeouts:
+    # See https://konflux-ci.dev/docs/how-tos/configuring/customizing-the-build/#configuring-timeouts
+    pipeline: 12h
   params:
   - name: git-url
     value: '{{source_url}}'
@@ -198,6 +201,7 @@ spec:
           value:
           - $(params.build-platforms)
       name: build-images
+      timeout: 12h
       params:
       - name: IMAGE
         value: $(params.output-image)
