fix quay-doomsday-backup name

--- a/art-cluster/pipelines/config/argocd/project/art-cd/quay-doomsday-backup/base/doomsday-pipeline-task.yaml
+++ b/art-cluster/pipelines/config/argocd/project/art-cd/quay-doomsday-backup/base/doomsday-pipeline-task.yaml
@@ -22,7 +22,7 @@ spec:
 
         set -e
 
-        artcd -vv doomsday-sync --version $(params.version) --all-arches
+        artcd -vv quay-doomsday-backup --version $(params.version) --all-arches
       securityContext:
         runAsGroup: 0
         runAsUser: 0
