test konflux custom task

--- a/doozer/doozerlib/backend/konflux_image_build_pipelinerun.yaml
+++ b/doozer/doozerlib/backend/konflux_image_build_pipelinerun.yaml
@@ -277,6 +277,10 @@ spec:
           value: main
         - name: pathInRepo
           value: custom-tasks/art-store-to-db.yaml
+        - name: token
+          value: ash-konflux-repo-token
+        - name: tokenKey
+          value: token
       runAfter:
       - build-image-index
       when:
