test konflux custom task

--- a/doozer/doozerlib/backend/konflux_image_build_pipelinerun.yaml
+++ b/doozer/doozerlib/backend/konflux_image_build_pipelinerun.yaml
@@ -271,8 +271,10 @@ spec:
       taskRef:
         resolver: git
         params:
-        - name: url
-          value: https://github.com/ashwindasr/art-konflux-template.git
+        - name: org
+          value: ashwindasr
+        - name: repo
+          value: art-konflux-template
         - name: revision
           value: main
         - name: pathInRepo
