test konflux custom task

--- a/doozer/doozerlib/backend/konflux_image_build_pipelinerun.yaml
+++ b/doozer/doozerlib/backend/konflux_image_build_pipelinerun.yaml
@@ -209,8 +209,8 @@ spec:
       runAfter:
         - clone-repository
       workspaces:
-        - name: basic-auth
-          workspace: git-auth
+      - name: git-basic-auth
+        workspace: git-auth
     - matrix:
         params:
         - name: PLATFORM
