--- a/clusters/cloudflare/package.json
+++ b/clusters/cloudflare/package.json
@@ -14,6 +14,7 @@
     "wrangler": "^3.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.670.0",
     "base-64": "^1.0.0"
   }
 }
