--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -9,10 +9,10 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    container: fedora:latest
+    container: registry.access.redhat.com/ubi9/ubi:latest
     steps:
-      - name: Install git
-        run: dnf install -y git
+      - name: Install dependencies
+        run: dnf install -y git clang
       - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
       - name: Verify uv installation
@@ -23,10 +23,6 @@ jobs:
           set-safe-directory: ${{ env.GITHUB_WORKSPACE }}
       - name: Install packages
         run: dnf install -y gcc krb5-devel make glibc
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
       - name: Create venv and install dependencies
         run: make venv
       - name: Run tests
