[art-cluster] update art-cd config

--- a/art-cluster/pipelines/config/argocd/project/art-cd/quay-doomsday-backup/base/doomsday-pipeline-task.yaml
+++ b/art-cluster/pipelines/config/argocd/project/art-cd/quay-doomsday-backup/base/doomsday-pipeline-task.yaml
@@ -14,6 +14,11 @@ spec:
     - env:
         - name: DOCKER_CONFIG
           value: /tmp/.docker
+        - name: SLACK_BOT_TOKEN
+          valueFrom:
+            secretKeyRef:
+              key: api-token
+              name: slack-bot-creds
       image: default-route-openshift-image-registry.apps.artc2023.pc3z.p1.openshiftapps.com/art-cd/art-cd:latest
       name: run-script
       resources: {}
@@ -22,11 +27,8 @@ spec:
 
         set -e
         
-        pip3 install --upgrade pip
-        pip3 install uv
-        uv venv --system-site-packages --python 3.9  
-        source .venv/bin/activate 
-        uv pip install -e artcommon/ -e doozer/ -e elliott/ -e pyartcd/ -e ocp-build-data-validator/
+        pip install stomp.py==8.1.0
+        pip install setuptools==70.0.0
         
         touch artcd.toml	
         artcd -vv --config artcd.toml quay-doomsday-backup --version $(params.version)
