--- a/doozer/requirements-dev.txt
+++ b/doozer/requirements-dev.txt
@@ -1,13 +1,10 @@
 autopep8
 add-trailing-comma
-black
-isort >= 5.0.0
+ruff
 coverage
-flake8
 flexmock
 pygit2 >= 1.11.1 # https://github.com/libgit2/pygit2/issues/1176
 pylint
 pytest == 8.0.2
-tox
 typing
 typing-extensions
