--- a/ocp-build-data-validator/requirements-dev.txt
+++ b/ocp-build-data-validator/requirements-dev.txt
@@ -3,8 +3,8 @@ setuptools
 flexmock
 mock
 
-# tox reqs
+
 coverage~=5.3
-flake8~=3.8.4
-tox~=3.20.1
+ruff
+pytest
 zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
