Add ruff to project

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,8 @@ ignore =
     W503,
     # missing whitespace around arithmetic operator
     E226,
+    # conflicts with black/ruff
+    E203,
 
 exclude = build/*, *.ini, *.in, MANIFEST*, *.md, .eggs, .tox, .venv
 max-complexity = -1
