Replace flake8 with ruff lint (#1579)
* add instruction to use

* wip

* remove flake8 as dependency

* Migrate flake rules to ruff

* lint fixes

* get rid of old rules

* include lambda

* format

* dont allow redefinition

* another fix

* remove redefined func

--- a/ruff.toml
+++ b/ruff.toml
@@ -37,7 +37,14 @@ target-version = "py311"
 [lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
 select = ["E4", "E7", "E9", "F"]
-ignore = []
+ignore = [
+    # imported but unused
+    # __init__ often imports to make available
+    # but does not use
+    "F401",
+    # bare except
+    "E722",
+]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
